# cunning-bot

./: .gitignore  Makefile.am  README  bot.scm  configure.ac  dsv.scm  log.scm  run-cbot.scm  tappet.in
plugins/: Makefile.am  indicator.scm  seen.scm  title.scm
spells/: network.scm
spells/network/: compat.scm  utils.scm
