## Config file for GNU Automake. 
##
## Copyright (C) 2014 Artyom V. Poptsov <poptsov.artyom@gmail.com>
##
## This file is part of Cunning Bot, an IRC bot written in Guile
## Scheme.
## 
## Cunning-Bot is free software: you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation, either version 3 of the
## License, or (at your option) any later version.
##
## Cunning-Bot is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Cunning-Bot.  If not, see <http://www.gnu.org/licenses/>.

SOURCES = \
	admin.scm	\
	basically.scm	\
	ddg.scm		\
	firearms.sexp	\
	help.scm	\
	lets.scm	\
	misc.scm	\
	shoot.scm	\
	title.scm

pluginsdir = $(guilesitedir)/cunning-bot/plugins
nobase_dist_plugins_DATA = $(SOURCES)

ETAGS_ARGS = $(SOURCES)

## Makefile.am ends here
